box/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: box
  labels:
    koeppster.net/aws_enabled: "true"
