box/manifests/box-quarantine-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: box-quarantine-listener
  namespace: box
  serviceName: box-quarantine-listener
  replicas: 1
  selector:
    matchLabels:
      app: box-quarantine-listener
  template:
    metadata:
      labels:
        app: box-quarantine-listener
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: box-quarantine-listener
          image: 996472359368.dkr.ecr.us-east-1.amazonaws.com/box-quarantine-container:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: box-config
              mountPath: /var/run/box
              readOnly: true
            - name: state
              mountPath: "${COLLECTOR_CONFIG}"
            - name: quarantine-template
              mountPath: /etc/box-quarantine
              readOnly: true
      volumes:
        - name: box-config
          secret:
            secretName: box-auth-config
        - name: quarantine-template
          configMap:
            name: box-quarantine-template
        - name: state
          persistentVolumeClaim:
            claimName: box-quarantine-state
