box/manifests/box-portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: box-portal
  namespace: box
spec:
  type: ClusterIP
  selector:
    app: box-portal
  ports:
    - name: http
      port: 8080
      targetPort: http
