box/manifests/box-quarantine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: box-quarantine-listener
  namespace: box
spec:
  clusterIP: None
  selector:
    app: box-quarantine-listener
  ports:
    - name: statefulset
      port: 80
      targetPort: 80
