box/manifests/box-redaction-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: box-redaction-service
  namespace: box
spec:
  selector:
    app: box-redaction
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: box-redaction
  namespace: box
  labels:
    app: box-redaction
spec:
  replicas: 1
  selector:
    matchLabels:
      app: box-redaction
  template:
    metadata:
      labels:
        app: box-redaction
    spec:
      containers:
        - name: box-redaction
          image: 996472359368.dkr.ecr.us-east-1.amazonaws.com/boxredact:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
